--- a/.github/workflows/schema-enforcer.yml
+++ b/.github/workflows/schema-enforcer.yml
@@ -19,48 +19,108 @@ jobs:
           python-version: '3.11'
       
       - name: Install validation tools
-        run: pip install jsonschema pyyaml
-      
-      - name: Validate YAML workflows
         run: |
-          echo "🔍 Validating workflow files..."
-          python << 'EOF'
-          import os, json, yaml, sys
-          from jsonschema import validate, ValidationError
-          from pathlib import Path
+          echo "🔧 Installing Python packages..."
+          pip install jsonschema pyyaml
+          echo "✅ Packages installed"
+          python -c "import jsonschema, yaml; print(f'jsonschema version: {jsonschema.__version__}')"
+      
+      - name: Debug - List workflow files
+        run: |
+          echo "📁 Workflow files found:"
+          find .github/workflows -name "*.yml" -type f | while read file; do
+            echo "  - $file"
+          done
+          echo "📁 Schema file check:"
+          ls -la .github/schemas/ || echo "No schemas directory"
+      
+      - name: Validate YAML workflows (with debug)
+        run: |
+          echo "🔍 Starting validation..."
           
-          # Load workflow schema
-          schema_path = Path('.github/schemas/workflow-schema.json')
-          with open(schema_path) as f:
-              workflow_schema = json.load(f)
-          
-          errors = []
-          validated = 0
-          
-          # Only validate workflow files in .github/workflows/
-          for yaml_file in Path('.github/workflows').rglob('*.yml'):
-              try:
-                  with open(yaml_file) as f:
-                      content = yaml.safe_load(f)
-                  
-                  # Validate against schema
-                  validate(instance=content, schema=workflow_schema)
-                  print(f"✅ {yaml_file}")
-                  validated += 1
-                  
-              except yaml.YAMLError as e:
-                  errors.append(f"{yaml_file}: YAML syntax error - {e}")
-              except ValidationError as e:
-                  errors.append(f"{yaml_file}: Schema violation - {e.message}")
-              except Exception as e:
-                  errors.append(f"{yaml_file}: Unexpected error - {e}")
-          
-          # Report results
-          if errors:
-              print(f"\n❌ Found {len(errors)} error(s) in {validated} workflow file(s):")
-              for error in errors:
-                  print(f"  - {error}")
-              sys.exit(1)
-          else:
-              print(f"\n✅ All {validated} workflow files passed schema validation")
-          EOF
+          # Create a simpler Python script that's easier to debug
+          cat > validate.py << 'EOF'
+import os, json, yaml, sys
+from pathlib import Path
+
+print("=== DEBUG INFO ===")
+print(f"Current directory: {os.getcwd()}")
+print(f"Python version: {sys.version}")
+
+# Check if schema file exists
+schema_path = Path('.github/schemas/workflow-schema.json')
+print(f"Schema path: {schema_path}")
+print(f"Schema exists: {schema_path.exists()}")
+
+if schema_path.exists():
+    try:
+        with open(schema_path) as f:
+            schema_content = f.read()
+            print(f"Schema size: {len(schema_content)} chars")
+            print(f"First 100 chars: {schema_content[:100]}")
+            
+            # Try to parse JSON
+            workflow_schema = json.loads(schema_content)
+            print("✅ Schema JSON parsed successfully")
+    except json.JSONDecodeError as e:
+        print(f"❌ Schema JSON error: {e}")
+        sys.exit(1)
+else:
+    print("❌ Schema file not found")
+    sys.exit(1)
+
+print("\n=== VALIDATING WORKFLOWS ===")
+
+errors = []
+validated = 0
+
+# Only validate workflow files in .github/workflows/
+workflow_dir = Path('.github/workflows')
+print(f"Workflow directory: {workflow_dir}")
+print(f"Workflow dir exists: {workflow_dir.exists()}")
+
+if workflow_dir.exists():
+    for yaml_file in workflow_dir.rglob('*.yml'):
+        print(f"\nChecking: {yaml_file}")
+        
+        try:
+            with open(yaml_file) as f:
+                content = yaml.safe_load(f)
+            print(f"  ✅ YAML parsed, type: {type(content)}")
+            
+            # Simple validation instead of jsonschema for now
+            if not isinstance(content, dict):
+                errors.append(f"{yaml_file}: Not a valid YAML dictionary")
+            elif 'name' not in content:
+                errors.append(f"{yaml_file}: Missing 'name' field")
+            elif 'jobs' not in content:
+                errors.append(f"{yaml_file}: Missing 'jobs' field")
+            else:
+                print(f"  ✅ Basic validation passed")
+                validated += 1
+                
+        except yaml.YAMLError as e:
+            errors.append(f"{yaml_file}: YAML syntax error - {e}")
+            print(f"  ❌ YAML error: {e}")
+        except Exception as e:
+            errors.append(f"{yaml_file}: Unexpected error - {e}")
+            print(f"  ❌ Unexpected error: {e}")
+else:
+    print("❌ No .github/workflows directory found")
+
+# Report results
+print(f"\n=== RESULTS ===")
+print(f"Validated files: {validated}")
+print(f"Errors found: {len(errors)}")
+
+if errors:
+    print("\n❌ ERRORS:")
+    for error in errors:
+        print(f"  - {error}")
+    sys.exit(1)
+else:
+    print("\n✅ All workflow files passed basic validation")
+EOF
+
+          # Run the debug script
+          python validate.py
