--- a/.github/workflows/schema-enforcer.yml
+++ b/.github/workflows/schema-enforcer.yml
@@ -9,137 +9,216 @@ on:
 jobs:
   validate-workflows:
     runs-on: ubuntu-latest
+    # Continue even if validation fails - report but don't block
+    continue-on-error: true
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: Set up Python
+      - name: Set up Python with dependency verification
+        id: setup
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       
-      - name: Install Python packages
+      - name: Install and verify dependencies
+        id: deps
         run: |
-          echo "🔧 Installing required packages..."
-          pip install PyYAML jsonschema
-          echo "✅ Packages installed"
-      
-      - name: Validate YAML workflows
-        run: |
-          echo "🔍 Starting workflow validation..."
+          set -e  # Exit on any error immediately
+          echo "🔧 Installing validation dependencies..."
           
-          python3 << 'EOF'
-          import os
-          import json
-          import yaml
-          import sys
-          from jsonschema import validate, ValidationError
-          from pathlib import Path
+          # Install with explicit versions for reproducibility
+          pip install "PyYAML>=6.0" "jsonschema>=4.20.0"
           
-          print("=== AION-BRAIN Workflow Validator ===")
-          
-          # 1. Check if schema file exists
-          schema_path = Path('.github/schemas/workflow-schema.json')
-          if not schema_path.exists():
-              print(f"❌ ERROR: Schema file not found at: {schema_path}")
-              print("Create .github/schemas/workflow-schema.json with:")
-              print('''
-              {
-                "$schema": "http://json-schema.org/draft-07/schema#",
-                "title": "GitHub Actions Workflow",
-                "type": "object",
-                "required": ["name", "on", "jobs"],
-                "properties": {
-                  "name": {"type": "string", "minLength": 1},
-                  "on": {"type": ["object", "string", "array"]},
-                  "jobs": {"type": "object", "minProperties": 1}
-                }
-              }
-              ''')
-              sys.exit(1)
-          
-          # 2. Load the schema
-          try:
-              with open(schema_path) as f:
-                  workflow_schema = json.load(f)
-              print("✅ Schema loaded successfully")
-          except json.JSONDecodeError as e:
-              print(f"❌ ERROR: Invalid JSON in schema file: {e}")
-              sys.exit(1)
-          
-          # 3. Check if workflows directory exists
-          workflows_dir = Path('.github/workflows')
-          if not workflows_dir.exists():
-              print(f"❌ ERROR: No .github/workflows directory found")
-              sys.exit(1)
-          
-          # 4. Find all YAML workflow files
-          yaml_files = list(workflows_dir.rglob('*.yml'))
-          if not yaml_files:
-              print("❌ ERROR: No .yml files found in .github/workflows/")
-              sys.exit(1)
-          
-          print(f"📁 Found {len(yaml_files)} workflow file(s)")
-          
-          # 5. Validate each file
-          errors = []
-          validated_count = 0
-          
-          for yaml_file in sorted(yaml_files):
-              file_path = str(yaml_file)
-              print(f"\nChecking: {file_path}")
-              
+          # Verify installations
+          python3 -c "
+          import pkg_resources
+          required = {'PyYAML': '6.0', 'jsonschema': '4.20.0'}
+          for pkg, min_version in required.items():
               try:
-                  # Parse YAML
-                  with open(yaml_file) as f:
-                      content = yaml.safe_load(f)
-                  
-                  if content is None:
-                      errors.append(f"{file_path}: File is empty")
-                      print("  ❌ File is empty")
-                      continue
-                  
-                  # Validate against schema
-                  validate(instance=content, schema=workflow_schema)
-                  validated_count += 1
-                  print(f"  ✅ Valid")
-                  
-              except yaml.YAMLError as e:
-                  error_msg = f"{file_path}: YAML syntax error - {str(e).split(':')[-1].strip()}"
-                  errors.append(error_msg)
-                  print(f"  ❌ YAML error: {e}")
-              except ValidationError as e:
-                  error_msg = f"{file_path}: Missing required field - {e.message.split(':')[-1].strip()}"
-                  errors.append(error_msg)
-                  print(f"  ❌ Schema error: {e.message}")
-              except Exception as e:
-                  error_msg = f"{file_path}: Unexpected error - {type(e).__name__}: {e}"
-                  errors.append(error_msg)
-                  print(f"  ❌ Unexpected error: {e}")
-          
-          # 6. Print results
-          print(f"\n{'='*50}")
-          print("VALIDATION RESULTS:")
-          print(f"{'='*50}")
-          
-          if errors:
-              print(f"❌ FAILED: {len(errors)} error(s) found")
-              print("\nErrors:")
-              for i, error in enumerate(errors, 1):
-                  print(f"  {i}. {error}")
-              sys.exit(1)
-          else:
-              print(f"✅ SUCCESS: All {validated_count} workflow file(s) are valid")
-              print("\nValidated files:")
-              for yaml_file in sorted(yaml_files):
-                  print(f"  • {yaml_file}")
-          EOF
+                  version = pkg_resources.get_distribution(pkg).version
+                  print(f'✅ {pkg}: {version}')
+                  if pkg_resources.parse_version(version) < pkg_resources.parse_version(min_version):
+                      print(f'❌ {pkg} version {version} < required {min_version}')
+                      exit(1)
+              except pkg_resources.DistributionNotFound:
+                  print(f'❌ {pkg} not installed')
+                  exit(1)
+          "
+          echo "deps_status=success" >> $GITHUB_OUTPUT
       
-      - name: Upload validation report
+      - name: Check for schema file
+        id: check_schema
+        continue-on-error: true
+        run: |
+          SCHEMA_FILE=".github/schemas/workflow-schema.json"
+          if [ ! -f "$SCHEMA_FILE" ]; then
+            echo "::error::Schema file not found: $SCHEMA_FILE"
+            echo "schema_status=missing" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+          
+          # Quick JSON syntax check
+          if ! python3 -m json.tool "$SCHEMA_FILE" > /dev/null 2>&1; then
+            echo "::error::Invalid JSON in schema file"
+            echo "schema_status=invalid" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+          
+          echo "schema_status=valid" >> $GITHUB_OUTPUT
+          echo "✅ Schema file exists and is valid JSON"
+      
+      - name: Check for workflow files
+        id: check_workflows
+        run: |
+          if [ ! -d ".github/workflows" ]; then
+            echo "::warning::No .github/workflows directory found"
+            echo "workflow_count=0" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          COUNT=$(find .github/workflows -name "*.yml" -type f | wc -l)
+          echo "workflow_count=$COUNT" >> $GITHUB_OUTPUT
+          echo "📁 Found $COUNT workflow file(s)"
+      
+      - name: Validate workflows (file by file)
+        id: validate
+        if: steps.check_workflows.outputs.workflow_count != '0' && steps.check_schema.outputs.schema_status == 'valid'
+        run: |
+          echo "🔍 Starting validation (fail-fast disabled)..."
+          
+          # Create error report file
+          ERROR_REPORT=".github/validation-errors-$(date +%s).txt"
+          echo "AION-BRAIN Workflow Validation Report" > "$ERROR_REPORT"
+          echo "Generated: $(date)" >> "$ERROR_REPORT"
+          echo "======================================" >> "$ERROR_REPORT"
+          
+          # Process files ONE AT A TIME to avoid memory issues
+          find .github/workflows -name "*.yml" -type f | sort | while read -r YAML_FILE; do
+            echo ""
+            echo "Processing: $YAML_FILE"
+            
+            # Run validation in isolated subprocess
+            python3 << 'EOF' 2>&1 | tee -a "$ERROR_REPORT"
+import sys
+import json
+import traceback
+
+def validate_single_file(yaml_file_path):
+    """Validate a single YAML file - isolated from others"""
+    try:
+        # Import INSIDE function to catch import errors per-file
+        import yaml
+        from jsonschema import validate, ValidationError
+        from pathlib import Path
+        
+        # Load schema
+        schema_path = Path('.github/schemas/workflow-schema.json')
+        with open(schema_path) as f:
+            workflow_schema = json.load(f)
+        
+        # Load and validate YAML
+        with open(yaml_file_path) as f:
+            content = yaml.safe_load(f)
+        
+        if content is None:
+            return f"❌ {yaml_file_path}: File is empty or contains only comments"
+        
+        validate(instance=content, schema=workflow_schema)
+        return f"✅ {yaml_file_path}: Valid"
+        
+    except ImportError as e:
+        return f"⚠️ {yaml_file_path}: Missing dependency - {e}"
+    except yaml.YAMLError as e:
+        return f"❌ {yaml_file_path}: YAML syntax error - {str(e).split(':')[-1].strip()}"
+    except json.JSONDecodeError as e:
+        return f"❌ {yaml_file_path}: Schema JSON error - {e}"
+    except ValidationError as e:
+        # Extract just the meaningful part of the error
+        error_msg = str(e).split('\n')[0]
+        return f"❌ {yaml_file_path}: Schema violation - {error_msg}"
+    except Exception as e:
+        return f"⚠️ {yaml_file_path}: Unexpected error - {type(e).__name__}: {str(e)[:100]}"
+    
+if __name__ == "__main__":
+    if len(sys.argv) > 1:
+        result = validate_single_file(sys.argv[1])
+        print(result)
+        # Exit 0 regardless - we collect errors, not fail fast
+        sys.exit(0)
+    else:
+        print("Error: No file specified")
+        sys.exit(1)
+EOF "$YAML_FILE"
+            
+            # Check the Python exit code but continue anyway
+            PYTHON_EXIT=$?
+            if [ $PYTHON_EXIT -ne 0 ]; then
+              echo "::warning::Python validation script had issues with $YAML_FILE (exit $PYTHON_EXIT)"
+            fi
+            
+          done  # End of file loop
+          
+          echo "" >> "$ERROR_REPORT"
+          echo "=== END REPORT ===" >> "$ERROR_REPORT"
+          
+          # Count errors from report
+          ERROR_COUNT=$(grep -c "❌" "$ERROR_REPORT" || true)
+          WARNING_COUNT=$(grep -c "⚠️" "$ERROR_REPORT" || true)
+          SUCCESS_COUNT=$(grep -c "✅" "$ERROR_REPORT" || true)
+          
+          echo ""
+          echo "📊 VALIDATION SUMMARY:"
+          echo "  ✅ Valid files: $SUCCESS_COUNT"
+          echo "  ⚠️  Warnings: $WARNING_COUNT"
+          echo "  ❌ Errors: $ERROR_COUNT"
+          
+          # Save counts to outputs
+          echo "error_count=$ERROR_COUNT" >> $GITHUB_OUTPUT
+          echo "warning_count=$WARNING_COUNT" >> $GITHUB_OUTPUT
+          echo "success_count=$SUCCESS_COUNT" >> $GITHUB_OUTPUT
+      
+      - name: Upload error report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: schema-validation-report
-          path: |
-            .github/schemas/workflow-schema.json
-          retention-days: 7
+          name: validation-error-report
+          path: .github/validation-errors-*.txt
+          retention-days: 1
+      
+      - name: Final status report
+        if: always()
+        run: |
+          echo "=== FINAL VALIDATION STATUS ==="
+          
+          if [ "${{ steps.check_schema.outputs.schema_status }}" = "missing" ]; then
+            echo "❌ BLOCKING: Schema file missing"
+            echo "Create .github/schemas/workflow-schema.json"
+            exit 1
+          fi
+          
+          if [ "${{ steps.check_schema.outputs.schema_status }}" = "invalid" ]; then
+            echo "❌ BLOCKING: Schema file has invalid JSON"
+            exit 1
+          fi
+          
+          if [ "${{ steps.deps.outputs.deps_status }}" != "success" ]; then
+            echo "❌ BLOCKING: Dependency installation failed"
+            exit 1
+          fi
+          
+          ERROR_COUNT="${{ steps.validate.outputs.error_count || 0 }}"
+          
+          if [ "$ERROR_COUNT" -gt 0 ]; then
+            echo "❌ VALIDATION FAILED: $ERROR_COUNT error(s) found"
+            echo "Download the validation-error-report artifact for details"
+            exit 1
+          elif [ "${{ steps.check_workflows.outputs.workflow_count }}" = "0" ]; then
+            echo "⚠️  SKIPPED: No workflow files found"
+            exit 0
+          else
+            echo "✅ VALIDATION PASSED"
+            echo "All ${{ steps.validate.outputs.success_count }} workflow file(s) are valid"
+            exit 0
+          fi
