--- a/.github/workflows/schema-enforcer.yml
+++ b/.github/workflows/schema-enforcer.yml
@@ -1,148 +1,263 @@
-name: Schema Enforcer
+name: Workflow Linter & Auto-Fixer
 on:
   pull_request:
     paths: ['**/*.yml', '**/*.yaml']
   push:
     branches: [main, master]
-    paths: ['**/*.yml', '**/*.yaml']
 
 jobs:
-  validate-workflows:
+  lint-and-fix:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       
-      - name: Install required packages
+      - name: Install linter tools
         run: |
-          pip install PyYAML jsonschema
-          echo "✅ Packages installed"
+          pip install yamllint pyyaml jsonschema
       
-      - name: Create and run validation
+      - name: Run yamllint with auto-fix
         run: |
-          # Create the complete validation script
-          cat > validate_work.py << 'EOF_VALIDATE'
-import os
-import sys
-import json
-import yaml
-from jsonschema import validate, ValidationError
+          echo "🔧 Linting workflow files..."
+          
+          # Create a custom yamllint config for GitHub Actions
+          cat > .yamllint.yml << 'EOF'
+          extends: default
+          
+          rules:
+            document-start: disable  # GitHub Actions doesn't need ---
+            line-length:
+              max: 120
+              allow-non-breakable-words: true
+              allow-non-breakable-inline-mappings: true
+            truthy:
+              check-keys: false  # GitHub Actions uses yes/no as strings
+            braces:
+              min-spaces-inside: 0
+              max-spaces-inside: 0
+            brackets:
+              min-spaces-inside: 0
+              max-spaces-inside: 0
+          EOF
+          
+          # Run yamllint on workflow files
+          for file in .github/workflows/*.yml; do
+            echo ""
+            echo "📄 Linting: $file"
+            
+            # Check for issues
+            if yamllint -f parsable "$file" 2>/dev/null | grep -q "error"; then
+              echo "  ⚠️  Found linting issues"
+              
+              # Create a backup
+              cp "$file" "$file.backup"
+              
+              # Try to auto-fix (yamllint doesn't auto-fix, but we can with Python)
+              python3 << 'EOF'
+import sys, yaml
+file_path = sys.argv[1]
 
-def main():
-    print("🔍 AION-BRAIN Workflow Validator")
-    print("=" * 50)
+try:
+    with open(file_path, 'r') as f:
+        content = yaml.safe_load(f)
     
-    # 1. Check if schema exists
-    schema_path = ".github/schemas/workflow-schema.json"
-    if not os.path.exists(schema_path):
-        print(f"❌ ERROR: Schema file not found at: {schema_path}")
-        print("\nCreate this file with:")
-        print('''
-{
-  "$schema": "http://json-schema.org/draft-07/schema#",
-  "title": "GitHub Actions Workflow",
-  "type": "object",
-  "required": ["name", "on", "jobs"],
-  "properties": {
-    "name": {"type": "string", "minLength": 1},
-    "on": {"type": ["object", "string", "array"]},
-    "jobs": {"type": "object", "minProperties": 1}
-  }
-}
-        ''')
-        return 1
-    
-    # 2. Load schema
-    try:
-        with open(schema_path, "r") as f:
-            schema = json.load(f)
-        print("✅ Schema loaded successfully")
-    except json.JSONDecodeError as e:
-        print(f"❌ ERROR: Invalid JSON in schema: {e}")
-        return 1
-    
-    # 3. Check for workflows directory
-    if not os.path.exists(".github/workflows"):
-        print("⚠️  No .github/workflows directory found")
-        return 0
-    
-    # 4. Find all workflow files
-    workflow_files = []
-    for root, dirs, files in os.walk(".github/workflows"):
-        for file in files:
-            if file.endswith(".yml"):
-                full_path = os.path.join(root, file)
-                workflow_files.append(full_path)
-    
-    if not workflow_files:
-        print("⚠️  No .yml files found in .github/workflows/")
-        return 0
-    
-    print(f"📁 Found {len(workflow_files)} workflow file(s)")
-    print("-" * 50)
-    
-    # 5. Validate each file
-    errors = []
-    success_count = 0
-    
-    for file_path in sorted(workflow_files):
-        print(f"\nChecking: {file_path}")
+    # Basic auto-fixes
+    if content:
+        # Ensure 'name' field exists (common missing field)
+        if 'name' not in content:
+            # Extract name from filename
+            import os
+            filename = os.path.basename(file_path).replace('.yml', '').replace('-', ' ').title()
+            content['name'] = filename
+            print(f"  ✅ Added missing 'name' field: {filename}")
+        
+        # Write back with consistent formatting
+        with open(file_path, 'w') as f:
+            yaml.dump(content, f, default_flow_style=False, sort_keys=False, width=120)
+        
+        print(f"  ✅ Auto-formatted: {file_path}")
+        
+except Exception as e:
+    print(f"  ❌ Could not auto-fix: {e}")
+EOF "$file"
+            else
+              echo "  ✅ No linting issues found"
+            fi
+          done
+      
+      - name: Validate workflow structure
+        run: |
+          echo "🔍 Validating workflow structure..."
+          
+          python3 << 'EOF'
+import os, sys, yaml, json
+
+# Define the minimum required structure
+REQUIRED_FIELDS = ['name', 'on', 'jobs']
+ERRORS = []
+
+for file in os.listdir('.github/workflows'):
+    if file.endswith('.yml'):
+        path = os.path.join('.github/workflows', file)
         
         try:
-            # Load YAML content
-            with open(file_path, "r") as f:
+            with open(path, 'r') as f:
                 content = yaml.safe_load(f)
             
-            if content is None:
-                errors.append(f"{file_path}: File is empty or contains only comments")
-                print("  ❌ Empty file")
+            if not content:
+                ERRORS.append(f"{file}: Empty file")
                 continue
             
-            # Validate against schema
-            validate(instance=content, schema=schema)
-            success_count += 1
-            print("  ✅ Valid")
+            # Check required fields
+            for field in REQUIRED_FIELDS:
+                if field not in content:
+                    ERRORS.append(f"{file}: Missing required field '{field}'")
+            
+            # Check jobs structure
+            if 'jobs' in content:
+                if not isinstance(content['jobs'], dict) or len(content['jobs']) == 0:
+                    ERRORS.append(f"{file}: 'jobs' must be a non-empty dictionary")
+                else:
+                    for job_name, job_config in content['jobs'].items():
+                        if 'runs-on' not in job_config:
+                            ERRORS.append(f"{file}: Job '{job_name}' missing 'runs-on'")
             
         except yaml.YAMLError as e:
-            error_msg = f"{file_path}: YAML syntax error"
-            if hasattr(e, 'problem'):
-                error_msg += f" - {e.problem}"
-            errors.append(error_msg)
-            print(f"  ❌ YAML error: {e}")
-        except ValidationError as e:
-            # Extract the meaningful part of the error
-            error_parts = str(e).split('\n')
-            error_msg = f"{file_path}: {error_parts[0]}"
-            errors.append(error_msg)
-            print(f"  ❌ Schema error: {error_parts[0]}")
-        except Exception as e:
-            errors.append(f"{file_path}: Unexpected error - {type(e).__name__}")
-            print(f"  ❌ Unexpected: {type(e).__name__}")
-    
-    # 6. Print final results
-    print(f"\n{'='*50}")
-    print("VALIDATION RESULTS:")
-    print(f"{'='*50}")
-    
-    if errors:
-        print(f"❌ FAILED: {len(errors)} error(s) found")
-        print("\nDetailed errors:")
-        for i, error in enumerate(errors, 1):
-            print(f"  {i}. {error}")
-        print(f"\n✅ Valid files: {success_count}")
-        return 1
-    else:
-        print(f"✅ SUCCESS: All {success_count} workflow file(s) are valid")
-        return 0
+            ERRORS.append(f"{file}: YAML syntax error - {e}")
 
-if __name__ == "__main__":
-    sys.exit(main())
-EOF_VALIDATE
+# Report results
+if ERRORS:
+    print("❌ VALIDATION ERRORS:")
+    for error in ERRORS:
+        print(f"  • {error}")
+    
+    print("\n💡 SUGGESTED FIXES:")
+    for error in ERRORS:
+        if "Missing required field 'name'" in error:
+            print(f"  • {error}: Add 'name: \"Workflow Name\"' at the top")
+        elif "Missing required field 'on'" in error:
+            print(f"  • {error}: Add triggers like 'on: [push]' or 'on: workflow_dispatch:'")
+        elif "Missing required field 'jobs'" in error:
+            print(f"  • {error}: Add 'jobs:' section with at least one job")
+        elif "missing 'runs-on'" in error:
+            print(f"  • {error}: Add 'runs-on: ubuntu-latest' to the job")
+    
+    sys.exit(1)
+else:
+    print("✅ All workflow files have valid structure")
+EOF
+      
+      - name: Create fix suggestions
+        if: failure()
+        run: |
+          echo "📝 Creating fix suggestions..."
           
-          # Run the validation
-          python3 validate_work.py
+          cat > fix_suggestions.md << 'EOF'
+          # Workflow Fix Suggestions
+          
+          Based on the validation errors, here are the fixes needed:
+          
+          ## Common Issues & Fixes:
+          
+          1. **Missing 'name' field**
+             ```yaml
+             # Add this at the top of your workflow
+             name: "Descriptive Workflow Name"
+             ```
+          
+          2. **Missing 'on' triggers**
+             ```yaml
+             # Add one of these:
+             on: [push]  # Run on all pushes
+             on: [pull_request]  # Run on PRs
+             on:
+               push:
+                 branches: [main, master]
+             on: workflow_dispatch:  # Manual trigger
+             ```
+          
+          3. **Missing 'jobs' section**
+             ```yaml
+             jobs:
+               example-job:
+                 runs-on: ubuntu-latest
+                 steps:
+                   - run: echo "Hello"
+             ```
+          
+          4. **Missing 'runs-on' in job**
+             ```yaml
+             jobs:
+               my-job:
+                 runs-on: ubuntu-latest  # ← Add this
+                 steps: [...]
+             ```
+          
+          ## Quick Fix Script:
+          ```bash
+          # Auto-add missing name fields
+          for file in .github/workflows/*.yml; do
+            if ! grep -q "^name:" "$file"; then
+              filename=$(basename "$file" .yml)
+              read -r -d '' NEW_CONTENT << 'EOM'
+          name: ${filename//-/ } Workflow
+          
+          $(cat "$file")
+          EOM
+              echo "$NEW_CONTENT" > "$file"
+              echo "Fixed: $file"
+            fi
+          done
+          ```
+          EOF
+          
+          echo "✅ Fix suggestions saved to fix_suggestions.md"
+      
+      - name: Commit auto-fixes
+        if: success()
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          
+          # Check if there are changes
+          if git diff --quiet; then
+            echo "✅ No fixes needed"
+          else
+            git add .
+            git commit -m "🔧 Auto-fix: Workflow linting improvements"
+            git push
+            echo "✅ Auto-fixes committed and pushed"
+          fi
+      
+      - name: Comment on PR with suggestions
+        if: failure() && github.event_name == 'pull_request'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const fs = require('fs');
+            let suggestions = '## ⚠️ Workflow Validation Failed\n\n';
+            
+            // Read the fix suggestions
+            try {
+              suggestions += fs.readFileSync('fix_suggestions.md', 'utf8');
+            } catch (e) {
+              suggestions += 'Some workflow files have validation issues. Check the workflow run for details.';
+            }
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: suggestions
+            });
